--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
     </div>
 
 </div>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://www.frontendmentor.io/profile/TiredQuan">Tired Quan</a>.
+  <div class="attribution" style="color: white;">
+    Challenge by <a style="color: white;" href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a style="color: white;" href="https://www.frontendmentor.io/profile/TiredQuan">Tired Quan</a>.
   </div>
   <script src="script.js"></script>
 </body>
